<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="app_name">App Hunt</string>
    <string name="title_select_app">Select App</string>
    <string name="title_save_app">Save App</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification">Notification</string>
    <string name="title_app_details">Details</string>
    <string name="title_top_apps">Top Apps</string>
    <string name="title_close">Close</string>
    <string name="title_all_collection">All Collections</string>
    <string name="title_favourite_collection">Favourite Collections</string>
    <string name="title_my_collection">My Collections</string>
    <string name="title_my_collections">My Collections</string>
    <string name="title_create_collection">Create Collection</string>
    <string name="title_search_apps">Apps</string>
    <string-array name="drawer_menu">
        <item>Trending Apps</item>
        <item>Top Hunters</item>
        <item>Top Apps</item>
        <item>Collections</item>
        <item>News</item>
        <item>Community</item>
        <item>Chat</item>
        <item>Suggestions</item>
        <item>Settings</item>
        <item>Help</item>
        <item>Add new app</item>
        <item>Apps Requirements</item>
        <item>Top Hunters Points</item>
    </string-array>
    <string name="action_enable_notifications">com.apphunt.app.action.ENABLE_NOTIFICATIONS</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_share">Share</string>
    <string name="action_suggest">Suggest</string>
    <string name="facebook_app_id">874212442599315</string>
    <string name="hint_description">Enter short description (max 100)</string>
    <string name="hint_please_enter_description">Please enter a short description…</string>
    <string name="hint_short_description">Please enter at least 50 letters…</string>
    <string name="save">Save</string>
    <string name="notification_no_internet">Enable your Internet connection to continue</string>
    <string name="not_available_in_the_store">App is unavailable on Google Play</string>
    <string name="server_error">Oops, something went wrong. Please, try again later :)</string>
    <string name="notification_cannot_login">Unsuccessful login attempt! Please try again…</string>
    <string name="saved_successfully">Your app is waiting for review. You will be notified when status is changed :)</string>
    <string name="app_already_exist">The app you are trying to add is already on AppHunt. Add another of your favourite apps :)</string>
    <string name="list_view_header_yesterday">Yesterday</string>
    <string name="list_view_header_today">Today</string>
    <string name="dismiss">DISMISS</string>
    <string name="settings">SETTINGS</string>
    <string name="show_continue">Continue</string>
    <string name="notification_delete_confirmation">You collection was successfully created!</string>
    <string name="section_notifications">Notifications</string>
    <string name="section_sounds">Sounds</string>
    <string name="info_select_app">This list is containing your installed applications that are available for sharing with the other users of AppHunt.</string>
    <string name="smartrate_yes">YES</string>
    <string name="smartrate_no">NO</string>
    <string name="smartrate_rate_dialog_message">Would you like to rate %s\non Google Play?</string>
    <string name="smartrate_do_you_love">Do you love %s?</string>
    <string name="smartrate_feedback_input_hint">Tell us what you think</string>
    <string name="smartrate_feedback_title">Feedback</string>
    <string name="smartrate_send">SEND</string>
    <string name="smartrate_rate_dialog_title">Rate</string>
    <string name="smartrate_rate_hint_feedback_please_enter_text">Please enter your feedback…</string>
    <string name="enable_app_notifications">App Notifications</string>
    <string name="enable_suggestions">Suggestions</string>
    <string name="enable_sounds">Sounds &amp; Vibrations</string>
    <string name="title_invite">AppHunt is invite only</string>
    <string name="invite_text">Share with %s friends to\nsign up for invite</string>
    <string name="invite_one_text">Share with %s friend to\nsign up for invite</string>
    <string name="share_subject_text">Take a look at this great app :)</string>
    <string name="company">AppHunt Inc. 2015</string>
    <string name="retry_text">Tap to retry</string>
    <string name="title_activity_share_on_app_hunt">ShareOnAppHuntActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="share_on_apphunt_label">Add to AppHunt</string>
    <string name="login_canceled_text">Your email is required to continue</string>
    <string name="login_info_text">Let your friends see what you do</string>
    <string name="login_info_add_to_collection">You need to be authorized in order to add this application to a collection</string>
    <string name="login_info_vote">You need to be authorized in order to vote for this application</string>
    <string name="login_info_save">You need to be authorized in order to save your favorite application in AppHunt</string>
    <string name="login_info_comment">You need to be authorized in order to post a comment for your favorite application</string>
    <string name="login_info_fav_collection">You need to be authorized in order to favorite this collection</string>
    <string name="login_info_create_collection">You need to be authorized in order to create a new collection</string>
    <string name="login_not_now">Not now</string>
    <string name="suggest_title">Suggest</string>
    <string name="suggestion_input_hint">How AppHunt can be improved?</string>
    <string name="suggestion_send">Improve</string>
    <string name="suggestion_empty_text_error">Please, enter your suggestion</string>
    <string name="feedback_send">Awesome! Thank you!</string>
    <string name="less"><![CDATA[<]]></string>
    <string name="more"><![CDATA[>]]></string>
    <string name="posted_by">by %s</string>
    <plurals name="header_voters">
        <item quantity="one">%d VOTER</item>
        <item quantity="other">%d VOTERS</item>
    </plurals>
    <string name="commenter_name">\@%s</string>
    <plurals name="header_comments">
        <item quantity="one">%d COMMENT</item>
        <item quantity="other">%d COMMENTS</item>
    </plurals>
    <string name="reply_to">\@%s </string>
    <string name="comment_entry_hint">Write a comment…</string>
    <string name="send">send</string>
    <string name="show_all_comments">Show all</string>
    <string name="hide_all_comments">hide all</string>
    <string name="be_first">Be the first one to comment! :)</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_random">Random</string>
    <string name="action_history">History</string>
    <string name="action_skip">SKIP</string>
    <string name="share_text"><![CDATA[<p>Join the hunt for cool new apps, every day!</p>]]></string>
    <string name="no_results_found">Nothing was found...</string>
    <string name="no_friends_found">No friends found...</string>
    <string name="details">Details</string>
    <string name="title_home">Home</string>
    <string name="title_top_hunters">Top Hunters</string>
    <string name="title_help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="how_to_add_new_app">How to add new app</string>
    <string name="apps_requirements">Apps Requirements</string>
    <string name="top_hunters_points">Top Hunters Points</string>
    <string name="title_choose_collection_banner">Choose a banner</string>
    <string name="no_collection_text">No collections</string>
    <string name="no_apps_text">No apps</string>
    <string name="no_comments_text">No comments</string>
    <string name="no_followers">No followers</string>
    <string name="delete_collection_menu_title">Delete</string>
    <string name="no_apps_in_collection">Go to Trending apps list and choose your apps</string>
    <string name="action_add_to_collection">Add to collection</string>
    <string name="no_favourite_collections">Favourite a collection to appear here</string>
    <string name="title_select_collection">Select Collection</string>
    <string name="sort_by">Sort by:</string>
    <string name="download">DOWNLOAD</string>
    <string name="open">OPEN</string>
    <string name="install">INSTALL</string>
    <string-array name="order">
        <item>Date Created</item>
        <item>Votes Count</item>
    </string-array>
    <string-array name="order_values">
        <item>all</item>
        <item>vote</item>
    </string-array>
    <string name="title_activity_gallery">Screenshots</string>
    <string name="title_webview">AppHunt Browser</string>
    <string name="title_comments">Comments</string>
    <string name="title_update_required">Update Required</string>
    <string name="title_search">Search Results</string>
    <string name="invite">Invitation</string>
    <string name="tags">Tags: %s</string>
    <string name="add_tag">Add Tag</string>
    <string name="title_search_collections">Collections</string>
    <string name="more_button">More</string>
    <string name="email_invite_title">AppHunt Invitation</string>
    <string name="email_invite_body">Invite text</string>
    <string name="sms_invite_body">Hey, %1$s invites you to AppHunt. Download it now: %2$s</string>
    <string name="msg_successful_invite">You have successfully sent an invite to your friend! :)</string>
    <string name="msg_successful_invites">You have successfully sent invites to %d of your followers! :)</string>
    <string name="msg_failure_invites">Something gone wrong and your invites couldn\'t be sent. Please try later... :(</string>
    <string name="msg_email_invite">Hi, \nDo you know %1$s? \n%2$s has sent you an invite to join the hunt on AppHunt: \n%3$s. :) \n\nBest regards!\nAppHunt Inc </string>
    <string name="msg_welcome">Hey, %s!\n\nI\'m using this app for quite some time and it\'s amazing! You will find lots of useful and cool apps that you cannot find fast and easy in the PlayStore!</string>
    <string name="msg_sms_charge">* Your carrier may charge for SMS messages used to send an AppHunt invites.</string>
    <string name="title_find_friends">Find Friends</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>
    <string name="title_friends_fb_follow">Follow your friends on Facebook</string>
    <string name="subtitle_friends_to_follow">Connect now to see what apps your friends hunt!</string>
    <string name="title_friends_tw_follow">Follow your friends on Twitter</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="action_find_friends">find_friends</string>
    <string name="title_user_followers">Followers</string>
    <string name="title_user_followings">Followings</string>
    <string name="alert_dialog_title">Select Month and Year</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="action_date">DATE</string>
    <string name="points_month">Points (%s)</string>
    <string name="points">Points</string>
    <string name="paid">PAID</string>
    <string name="share">Share</string>
    <string name="about_title">Community</string>
    <string name="refresh">Refresh</string>
</resources>