<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="collapseActionView|ifRoom"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.support.v7.widget.SearchView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_collection"
        android:icon="@drawable/btn_delete"
        android:title="@string/delete_collection_menu_title"
        android:showAsAction="collapseActionView|always"
        app:showAsAction="collapseActionView|always"
        android:visible="false" />

    <item
        android:id="@+id/action_add_to_collection"
        android:icon="@drawable/ic_add_to_collection"
        android:title="@string/action_add_to_collection"
        app:showAsAction="always" />
</menu>